src/sass/layout/_filters-section.scss
.filters {
  background-color: var(--for-pagination-footer-votes-background-color);
  margin-bottom: 0px;
}
.divForFilters {
  overflow: hidden;
  position: absolute;
  left: 16px;
  bottom: 10px;
  padding: 16px 0;
}
.select {
  width: 150px;
  @media screen and (min-width: 767px) {
    width: 200px;
  }

  border: 1px solid var(--main-black-color);
  border-radius: 10px;
  cursor: pointer;
}
.options {
  color: var(--footer-text-color);
  background-color: var(--background-transparent-color);
  transition: color 250ms linear, background-color 250ms linear;
}
.options:hover {
  background-color: var(--modal-backdrop-color);
  color: var(--main-white-color);
}

